# mve-joiner

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  LICENSE  Makefile  README.md  liccheck.ini  pyproject.toml  tasks.py
.devcontainer/: create.sh  devcontainer.json  docker-compose.yaml  install.sh
data/: mve_join.pas
src/mve_joiner_redux/: __init__.py  __main__.py  mve_joiner.py  setting.py
